--- a/index.html
+++ b/index.html
@@ -13,12 +13,24 @@
     <!-- <meta property="og:url" content="FB上的網址" /> -->
     <meta property="og:image" content="./assets/icons8-summer-96.png/" />
 
-    <link rel="stylesheet" href="./styles/reset.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel = "shortcut icon"  href ="./assets/icons8-summer-96.png">
     <link rel=“apple-touch-icon” href="./assets/icons8-summer-96.png">
     <link rel="stylesheet" href="./styles/index.css">
 
     <title>高雄旅遊資訊</title>
   </head>
-  <body></body>
+  <body>
+    <header class="header">
+      <div>
+        <h1>高雄旅遊資訊</h1>
+      <select name="" id="">
+        <option value="">--請選擇行政區--</option>
+      </select>
+      </div>
+      <nav>
+
+      </nav>
+    </header>
+  </body>
 </html>
