--- a/index.html
+++ b/index.html
@@ -4,19 +4,25 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name ="keywords"content ="高雄旅遊資訊, JavaScript" >
-    <meta name ="description" content="高雄旅遊資訊">
-    <meta name="author" content="Ching-Wen Hu">
+    <meta name="keywords" content="高雄旅遊資訊, JavaScript" />
+    <meta name="description" content="高雄旅遊資訊" />
+    <meta name="author" content="Ching-Wen Hu" />
     <meta property="og:title" content="高雄旅遊資訊" />
     <meta property="og:description" content="高雄旅遊資訊" />
     <meta property="og:type" content="website" />
     <!-- <meta property="og:url" content="FB上的網址" /> -->
     <meta property="og:image" content="./assets/icons8-summer-96.png/" />
 
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel = "shortcut icon"  href ="./assets/icons8-summer-96.png">
-    <link rel=“apple-touch-icon” href="./assets/icons8-summer-96.png">
-    <link rel="stylesheet" href="./styles/index.css">
+    <link rel="shortcut icon" href="./assets/icons8-summer-96.png" />
+    <link rel="“apple-touch-icon”" href="./assets/icons8-summer-96.png" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+      crossorigin="anonymous"
+    />
+    
+    <link rel="stylesheet" href="./styles/index.css" />
 
     <title>高雄旅遊資訊</title>
   </head>
@@ -24,13 +30,49 @@
     <header class="header">
       <div>
         <h1>高雄旅遊資訊</h1>
-      <select name="" id="">
-        <option value="">--請選擇行政區--</option>
-      </select>
+        <select name="選擇行政區" id="district" class="form-control">
+          <option value="請選擇行政區">--請選擇行政區--</option>
+        </select>
       </div>
       <nav>
-
+        <h3>熱門行政區</h3>
+        <ul>
+          <li><a href="#"></a>苓雅區</li>
+          <li><a href="#"></a>三民區</li>
+          <li><a href="#"></a>新興區</li>
+          <li><a href="#"></a>鹽埕區</li>
+        </ul>
       </nav>
     </header>
+    <main class="main">
+      <div>
+        <div><i class="fas fa-arrow-down"></i></div>
+        <h2></h2>
+        <ul></ul>
+      </div>
+
+      <nav aria-label="Page navigation example">
+        <ul class="pagination">
+          <li class="page-item"><a class="page-link" href="#">Previous</a></li>
+          <li class="page-item"><a class="page-link" href="#">1</a></li>
+          <li class="page-item"><a class="page-link" href="#">2</a></li>
+          <li class="page-item"><a class="page-link" href="#">3</a></li>
+          <li class="page-item"><a class="page-link" href="#">Next</a></li>
+        </ul>
+      </nav>
+    </main>
+
+    <footer class="footer">
+      <p>高雄旅遊網</p>
+      <p><a href="">資料來源：高雄市政府</a></p>
+    </footer>
+
+    <script src="https://kit.fontawesome.com/a2505215bf.js" crossorigin="anonymous"></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+      crossorigin="anonymous"
+    ></script>
+    <script src="./js/all.js"></script>
   </body>
 </html>
