--- a/index.html
+++ b/index.html
@@ -21,26 +21,29 @@
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
       crossorigin="anonymous"
     />
-    
+
     <link rel="stylesheet" href="./styles/index.css" />
 
     <title>高雄旅遊資訊</title>
   </head>
   <body>
-    <header class="header">
-      <div>
-        <h1>高雄旅遊資訊</h1>
-        <select name="選擇行政區" id="district" class="form-control">
-          <option value="請選擇行政區">--請選擇行政區--</option>
-        </select>
+    <header class="header container-fluid py-4">
+      <div class="py-4">
+        <h1 class="display-4 text-center py-5 text-white mb-4">高雄旅遊資訊</h1>
+        <div class="col-8 col-lg-4 mx-auto rounded mb-5 py-3">
+          <select name="選擇行政區" id="district" class="form-select" >
+            <option value="請選擇行政區" disabled selected>--請選擇行政區--</option>
+           <option value="鳳山區">鳳山區</option>
+          </select>
+        </div>
       </div>
-      <nav>
-        <h3>熱門行政區</h3>
-        <ul>
-          <li><a href="#"></a>苓雅區</li>
-          <li><a href="#"></a>三民區</li>
-          <li><a href="#"></a>新興區</li>
-          <li><a href="#"></a>鹽埕區</li>
+      <nav class="header_nav col-8 bg-white mx-auto rounded py-2">
+        <h3 class="mb-2 px-3 py-2 text-center text-lg-start">熱門行政區</h3>
+        <ul class="row list-unstyled m-0 text-center text-lg-start pb-3">
+          <li class="col-md-6 col-lg-3 mb-3 mb-lg-0"><button type="button"class="btn btn-primary btn-lg mx-3">苓雅區</button>  </li>
+          <li class="col-md-6 col-lg-3 mb-3 mb-lg-0 "><button type="button" class="btn btn-danger btn-lg mx-3">三民區</button></li>
+          <li class="col-md-6 col-lg-3 mb-3 mb-lg-0"><button type="button" class="btn btn-warning btn-lg mx-3">新興區</button></li>
+          <li class="col-md-6 col-lg-3 mb-3 mb-lg-0"><button type="button" class="btn btn-info btn-lg mx-3">鹽埕區</button></li>
         </ul>
       </nav>
     </header>
@@ -67,7 +70,12 @@
       <p><a href="">資料來源：高雄市政府</a></p>
     </footer>
 
-    <script src="https://kit.fontawesome.com/a2505215bf.js" crossorigin="anonymous"></script>
+    <!-- scrollToTop -->
+
+    <script
+      src="https://kit.fontawesome.com/a2505215bf.js"
+      crossorigin="anonymous"
+    ></script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
