add css styles for main and set media query for button width at large screenn size

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <title>高雄旅遊資訊</title>
   </head>
   <body>
-    <header class="header container-fluid py-4">
+    <header class="header container-fluid py-1">
       <div class="py-4">
         <h1 class="display-4 text-center py-5 text-white mb-4">高雄旅遊資訊</h1>
         <div class="col-8 col-lg-4 mx-auto rounded mb-5 py-3">
@@ -37,19 +37,19 @@
           </select>
         </div>
       </div>
-      <nav class="header_nav col-8 bg-white mx-auto rounded py-1 ">
+      <nav class="header_nav col-8 bg-white mx-auto rounded py-1 py-lg-3">
         <h3 class="mb-2 px-3 py-2 text-center text-lg-start">熱門行政區</h3>
         <ul class="row list-unstyled m-0 text-center text-lg-start pb-1 ">
-          <li class="col-md-6 col-lg-3 mb-3 mb-lg-0"><button type="button"class="btn btn-primary btn-lg mx-3">苓雅區</button>  </li>
-          <li class="col-md-6 col-lg-3 mb-3 mb-lg-0 "><button type="button" class="btn btn-danger btn-lg mx-3">三民區</button></li>
-          <li class="col-md-6 col-lg-3 mb-3 mb-lg-0"><button type="button" class="btn btn-warning btn-lg mx-3">新興區</button></li>
-          <li class="col-md-6 col-lg-3 mb-3 mb-lg-0"><button type="button" class="btn btn-info btn-lg mx-3">鹽埕區</button></li>
+          <li class="col-6 col-lg-3 mb-3 mb-lg-0"><button type="button"class="btn btn-primary btn-lg mx-3">苓雅區</button>  </li>
+          <li class="col-6 col-lg-3 mb-3 mb-lg-0 "><button type="button" class="btn btn-danger btn-lg mx-3">三民區</button></li>
+          <li class="col-6 col-lg-3 mb-3 mb-lg-0"><button type="button" class="btn btn-warning btn-lg mx-3">新興區</button></li>
+          <li class="col-6 col-lg-3 mb-3 mb-lg-0"><button type="button" class="btn btn-info btn-lg mx-3">鹽埕區</button></li>
         </ul>
       </nav>
     </header>
     <main class="main">
-      <div>
-        <div><i class="fas fa-arrow-down"></i></div>
+      <div class="container-fluid">
+        <div class="arrow-down text-center pt-1"><i class="fas fa-arrow-down fa-2x"></i></div>
         <h2></h2>
         <ul></ul>
       </div>
