--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
     <main class="main">
       <div class="container-fluid">
         <div class="arrow-down text-center pt-1"><i class="fas fa-arrow-down fa-2x"></i></div>
+        <div class="border_top"></div>
         <h2></h2>
         <ul></ul>
       </div>
