--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <div class="py-4">
         <h1 class="display-4 text-center py-5 text-white mb-4">高雄旅遊資訊</h1>
         <div class="col-8 col-lg-4 mx-auto rounded mb-5 py-3">
-          <select name="選擇行政區" id="district" class="form-select" >
+          <select name="選擇行政區" id="district" class="district-select form-select" >
             <option value="請選擇行政區" disabled selected>--請選擇行政區--</option>
            <option value="鳳山區">鳳山區</option>
           </select>
@@ -39,7 +39,7 @@
       </div>
       <nav class="header_nav col-8 bg-white mx-auto rounded py-1 py-lg-3">
         <h3 class="mb-2 px-3 py-2 text-center text-lg-start">熱門行政區</h3>
-        <ul class="row list-unstyled m-0 text-center text-lg-start pb-1 ">
+        <ul class="popularDistrict_list row list-unstyled m-0 text-center text-lg-start pb-1 ">
           <li class="col-6 col-lg-3 mb-3 mb-lg-0"><button type="button"class="btn btn-primary btn-lg mx-3">苓雅區</button>  </li>
           <li class="col-6 col-lg-3 mb-3 mb-lg-0 "><button type="button" class="btn btn-danger btn-lg mx-3">三民區</button></li>
           <li class="col-6 col-lg-3 mb-3 mb-lg-0"><button type="button" class="btn btn-warning btn-lg mx-3">新興區</button></li>
@@ -51,8 +51,8 @@
       <div class="container-fluid">
         <div class="arrow-down text-center pt-1"><i class="fas fa-arrow-down fa-2x"></i></div>
         <div class="border_top"></div>
-        <h2></h2>
-        <ul></ul>
+        <h2 class="district_title"></h2>
+        <ul class="touristSpot_list"></ul>
       </div>
 
       <nav aria-label="Page navigation example">
