render data on web

--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
       <div class="container-fluid">
         <div class="arrow-down text-center pt-1"><i class="fas fa-arrow-down fa-2x"></i></div>
         <div class="border_top"></div>
-        <h2 class="district_title"></h2>
-        <ul class="touristSpot_list"></ul>
+        <h2 class="district_title text-center"></h2>
+        <ul class="touristSpot_list my-5"></ul>
       </div>
 
       <nav aria-label="Page navigation example">
