--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <title>高雄旅遊資訊</title>
   </head>
   <body>
-    <header class="header container-fluid py-1">
+    <header class="header position-relative container-fluid py-1">
       <div class="py-4">
         <h1 class="display-4 text-center py-5 text-white mb-4">高雄旅遊資訊</h1>
         <div class="col-8 col-lg-4 mx-auto rounded mb-5 py-3">
@@ -49,7 +49,7 @@
     </header>
     <main class="main">
       <div class="container-fluid">
-        <div class="arrow-down text-center pt-1"><i class="fas fa-arrow-down fa-2x"></i></div>
+        <div class="positon-relative arrow-down text-center pt-1"><i class="fas fa-arrow-down fa-2x"></i></div>
         <div class="border_top"></div>
         <h2 class="district_title text-center"></h2>
         <ul class="touristSpot_list my-5"></ul>
