--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     </header>
     <main class="main">
       <div class="container-fluid">
-        <div class="positon-relative arrow-down text-center pt-1"><i class="fas fa-arrow-down fa-2x"></i></div>
+        <div class="positon-relative arrow-down text-center pt-1"><i class="fas fa-arrow-down fa-lg"></i></div>
         <div class="border_top"></div>
         <h2 class="district_title text-center"></h2>
         <ul class="touristSpot_list my-5"></ul>
