js -render data

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         </div>
       </div>
       <nav class="header_nav col-8 bg-white mx-auto rounded py-1 py-lg-3">
-        <h3 class="mb-2 px-3 py-2 text-center text-lg-start">熱門行政區</h3>
+        <h3 class="mb-0 px-3 py-2 text-center text-lg-start">熱門行政區</h3>
         <ul class="popularDistrict_list row list-unstyled m-0 text-center text-lg-start pb-1 ">
           <li class="col-6 col-lg-3 mb-3 mb-lg-0"><button type="button"class="btn btn-primary btn-lg mx-3">苓雅區</button>  </li>
           <li class="col-6 col-lg-3 mb-3 mb-lg-0 "><button type="button" class="btn btn-danger btn-lg mx-3">三民區</button></li>
@@ -47,13 +47,13 @@
         </ul>
       </nav>
     </header>
-    <main class="main">
-      <div class="container-fluid">
+    <main class="main my-5 container">
+      <div class="container">
         <div class="positon-relative arrow-down text-center pt-1"><i class="fas fa-arrow-down fa-lg"></i></div>
-        <div class="border_top"></div>
-        <h2 class="district_title text-center"></h2>
-        <ul class="touristSpot_list my-5"></ul>
+        <div class="border_top mb-2"></div>
       </div>
+      <h2 class="district_title text-center my-3"></h2>
+      <ul class="touristSpot_list list-unstyled row"></ul>
 
       <nav aria-label="Page navigation example">
         <ul class="pagination">
