add to-top style/function, add functions for : renderSelectOptions, renderSelected Options

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <div class="col-8 col-lg-4 mx-auto rounded mb-5 py-3">
           <select name="選擇行政區" id="district" class="district-select form-select" >
             <option value="請選擇行政區" disabled selected>--請選擇行政區--</option>
-           <option value="鳳山區">鳳山區</option>
+           <option value="全部">全部</option>
           </select>
         </div>
       </div>
@@ -72,7 +72,9 @@
     </footer>
 
     <!-- scrollToTop -->
-
+    <div class="toTop">
+        <a href="#" class="btn btn-secondary"><i class="fas fa-arrow-up"></i></a>
+    </div>
     <script
       src="https://kit.fontawesome.com/a2505215bf.js"
       crossorigin="anonymous"
