--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <div class="border_top mb-2"></div>
       </div>
       <h2 class="district_title text-center my-3"></h2>
-      <ul class="touristSpot_list list-unstyled row"></ul>
+      <ul class="touristSpot_list list-unstyled row p-2"></ul>
 
       <nav aria-label="Page navigation example">
         <ul class="pagination">
