--- a/index.html
+++ b/index.html
@@ -40,10 +40,10 @@
       <nav class="header_nav col-8 bg-white mx-auto rounded py-1 py-lg-3">
         <h3 class="mb-0 px-3 py-3 text-center text-lg-start">熱門行政區</h3>
         <ul class="popularDistrict_list row list-unstyled m-0 text-center text-lg-start pb-1 pt-lg-3">
-          <li class="col-6 col-lg-3 mb-3 mb-lg-0"><button type="button"class="btn btn-primary btn-lg mx-3">苓雅區</button>  </li>
-          <li class="col-6 col-lg-3 mb-3 mb-lg-0 "><button type="button" class="btn btn-danger btn-lg mx-3">三民區</button></li>
-          <li class="col-6 col-lg-3 mb-3 mb-lg-0"><button type="button" class="btn btn-warning btn-lg mx-3">新興區</button></li>
-          <li class="col-6 col-lg-3 mb-3 mb-lg-0"><button type="button" class="btn btn-info btn-lg mx-3">鹽埕區</button></li>
+          <li class="col-6 col-lg-3 mb-3 mb-lg-0"><button type="button"class="btn btn-primary btn-md-lg mx-3">苓雅區</button>  </li>
+          <li class="col-6 col-lg-3 mb-3 mb-lg-0 "><button type="button" class="btn btn-danger btn-md-lg mx-3">三民區</button></li>
+          <li class="col-6 col-lg-3 mb-3 mb-lg-0"><button type="button" class="btn btn-warning btn-md-lg mx-3">新興區</button></li>
+          <li class="col-6 col-lg-3 mb-3 mb-lg-0"><button type="button" class="btn btn-info btn-md-lg mx-3">鹽埕區</button></li>
         </ul>
       </nav>
     </header>
