replace popular districts due toabsence in API

--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
         <ul class="popularDistrict_list row list-unstyled m-0 text-center text-lg-start pb-1 pt-lg-3">
           <li class="col-6 col-lg-3 mb-3 mb-lg-0"><button type="button"class="btn btn-primary btn-md-lg mx-3">苓雅區</button>  </li>
           <li class="col-6 col-lg-3 mb-3 mb-lg-0 "><button type="button" class="btn btn-danger btn-md-lg mx-3">三民區</button></li>
-          <li class="col-6 col-lg-3 mb-3 mb-lg-0"><button type="button" class="btn btn-warning btn-md-lg mx-3">新興區</button></li>
-          <li class="col-6 col-lg-3 mb-3 mb-lg-0"><button type="button" class="btn btn-info btn-md-lg mx-3">鹽埕區</button></li>
+          <li class="col-6 col-lg-3 mb-3 mb-lg-0"><button type="button" class="btn btn-warning btn-md-lg mx-3">甲仙區</button></li>
+          <li class="col-6 col-lg-3 mb-3 mb-lg-0"><button type="button" class="btn btn-info btn-md-lg mx-3">美濃區</button></li>
         </ul>
       </nav>
     </header>
