--- a/index.html
+++ b/index.html
@@ -56,12 +56,12 @@
       <ul class="touristSpot_list list-unstyled row p-2"></ul>
 
       <nav aria-label="Page navigation example">
-        <ul class="pagination">
-          <li class="page-item"><a class="page-link" href="#">Previous</a></li>
+        <ul class="pagination" id="paginator">
+          <!-- <li class="page-item"><a class="page-link" href="#">Previous</a></li>
           <li class="page-item"><a class="page-link" href="#">1</a></li>
           <li class="page-item"><a class="page-link" href="#">2</a></li>
           <li class="page-item"><a class="page-link" href="#">3</a></li>
-          <li class="page-item"><a class="page-link" href="#">Next</a></li>
+          <li class="page-item"><a class="page-link" href="#">Next</a></li> -->
         </ul>
       </nav>
     </main>
