add pagination functions

--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
     </main>
 
     <footer class="footer">
-      <p>高雄旅遊網</p>
-      <p><a href="">資料來源：高雄市政府</a></p>
+      <p class ="text-center">高雄旅遊網</p>
+      <p class ="text-center text-dark"><a href="">資料來源：高雄市政府</a></p>
     </footer>
 
     <!-- scrollToTop -->
